--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-directory = D:\\Ankit\\workspace\\BetaSamGIT\\files\\
-cron =   0 0 9,16 * * MON-FRI
-cron_test = 0 0/5 * * * *
+directory=C:\\Users\\yash.sharma\\Desktop\\
+#cron=0 0 9,16 * * MON-FRI
+cron=* * * ? * *
